[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[dependencies]
log = "0.4.22"
